--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,6 +12,7 @@
     <% for ( let site in templateVars ) { %>
       <li>
         <%= templateVars[site] %> shortened to <%= site %>
+        <a href="/urls/<%=site%>">Edit</a>
         <form method="POST" action="/urls/<%=site%>/delete">
           <input type="submit" value="DELETE">
         </form>
