--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,1 +1,7 @@
 <title>TinyURL</title>
+
+<form action="/login" method="POST" style="margin:150px;">
+  <label for="username">Username:</label>
+  <input id="username" type="text" name="username" placeholder="username" style="width: 300px">
+  <input type="submit" value="Submit">
+</form>
