checking cookie on each view.;

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,3 +5,4 @@
   <input id="username" type="text" name="username" placeholder="username" style="width: 300px">
   <input type="submit" value="Submit">
 </form>
+<p><%=username%></p>
