--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
       <br>
       <label for="password">Password:</label>
       <input id="password" type="password" name="password" placeholder="********" style="width: 300px">
-      <input type="submit" value="Register">
+      <input type="submit" value="Login">
   </form>
 </body>
 </html>
