--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,7 +11,7 @@
   <ul>
     <% for ( let site in urlDB ) { %>
       <li>
-        <%=urlDB[site]%> shortened to <%= site %>
+        <%=urlDB[site][site]%> shortened to <%= site %>
         <a href="/urls/<%=site%>">Edit</a>
         <form method="POST" action="/urls/<%=site%>/delete">
           <input type="submit" value="DELETE">
