--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,10 +12,14 @@
     <% for ( let site in urlDB ) { %>
       <li>
         <%=urlDB[site][site]%> shortened to <%= site %>
-        <a href="/urls/<%=site%>">Edit</a>
-        <form method="POST" action="/urls/<%=site%>/delete">
-          <input type="submit" value="DELETE">
-        </form>
+        <% if (urlDB[site].user_id == user_id) {%>
+          <a href="/urls/<%=site%>">Edit</a>
+          <form method="POST" action="/urls/<%=site%>/delete">
+            <input type="submit" value="DELETE">
+          </form>
+        <% } else { %>
+          <i>Post owned by <%= urlDB[site].user_id %></i>
+        <% } %>
       </li>
     <% } %>
   </ul>
