--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <% include ./partials/_head %>
 </head>
 
 <body>
@@ -8,9 +9,9 @@
 
   <h1><%=shortURL%></h1>
   <h2><%=urlDB[shortURL][shortURL]%></h2>
- <form action="#" method="POST" style="margin:150px;">
-      <input id="longURL" type="text" name="longURL" value="<%=urlDB[shortURL][shortURL]%>" style="width: 300px">
-      <input type="submit" value="Update">
+  <form action="#" method="POST" style="margin:150px;">
+    <input id="longURL" type="text" name="longURL" value="<%=urlDB[shortURL][shortURL]%>" style="width: 300px">
+    <input type="submit" value="Update">
   </form>
 </body>
 </html>
