--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,19 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <% include ./partials/_head %>
 
 </head>
 
-<body style="font-size: 20px; padding:50px">
- <form action="/login" method="POST" style="margin:150px;">
-      <label for="email">Email:</label>
-      <input id="email" type="email" name="email" placeholder="EM@IL.COM" style="width: 300px">
-      <br>
-      <label for="password">Password:</label>
-      <input id="password" type="password" name="password" placeholder="********" style="width: 300px">
-      <input type="submit" value="Login">
+<body>
+  <% include ./partials/_header %>
+  <form action="/login" method="POST" style="margin:150px;">
+    <label for="email">Email:</label>
+    <input id="email" type="email" name="email" placeholder="EM@IL.COM" style="width: 300px">
+    <br>
+    <label for="password">Password:</label>
+    <input id="password" type="password" name="password" placeholder="********" style="width: 300px">
+    <input type="submit" value="Login">
   </form>
 </body>
 </html>
