--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-
+  <% include ./partials/_head %>
 </head>
 
-<body style="font-size: 20px; padding:50px">
+<body>
   <% include ./partials/_header %>
- <form action="/urls" method="POST" style="margin:150px;">
-      <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
+  <form action="/urls" method="POST" style="margin:150px;">
+    <label for="longURL">Enter a URL:</label>
+    <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+    <input type="submit" value="Submit">
   </form>
 </body>
 </html>
