--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,7 +9,7 @@
 
   <h1><%=shortURL%></h1>
   <h2><%=urlDB[shortURL][shortURL]%></h2>
-  <form action="#" method="POST" style="margin:150px;">
+  <form action="?_method=PUT" method="POST" style="margin:150px;">
     <input id="longURL" type="text" name="longURL" value="<%=urlDB[shortURL][shortURL]%>" style="width: 300px">
     <input type="submit" value="Update">
   </form>
