showing timestamp on /urls. created left padded function to pad dates < 10

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,6 +26,8 @@
         </form>
         Views:<%=urlDB[site].visits%>
         Unique Views:<%=urlDB[site].uniqueVisits%>
+        <br>
+        <%= `${urlDB[site].timestampCreated.YYYY}.${urlDB[site].timestampCreated.MM}.${urlDB[site].timestampCreated.DD}` %>
       </li>
     </div>
     <% } %>
