--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -6,31 +6,31 @@
 
 <body>
   <% include ./partials/_header %>
-<div class="container-fluid" id="index_container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jumbotron" style=>
-       <a href="/urls/new"><h1>Shorten your link</h1></a>
-      </div>
-    </div>
-  </div>
-  <ul>
-    <div class="container">
-    <% for ( let site in urlDB ) { %>
+  <div class="container-fluid" id="index_container">
     <div class="row">
-      <li>
-        <%=urlDB[site][site]%> shortened to <%= site %>
-        <a href="/urls/<%=site%>">Edit</a>
-        <form method="POST" action="/urls/<%=site%>/delete?_method=DELETE">
-          <input type="submit" value="DELETE">
-        </form>
-        Views:<%=urlDB[site].visits%>
-        Unique Views:<%=urlDB[site].uniqueVisits%>
-        <br>
-        <%= `${urlDB[site].timestampCreated.YYYY}.${urlDB[site].timestampCreated.MM}.${urlDB[site].timestampCreated.DD}` %>
-      </li>
-    </div>
-    <% } %>
+      <div class="col-md-12">
+        <div class="jumbotron" style=>
+         <a href="/urls/new"><h1>Shorten your link</h1></a>
+       </div>
+     </div>
+   </div>
+   <ul>
+    <div class="container">
+      <% for ( let site in urlDB ) { %>
+      <div class="row">
+        <li>
+          <%=urlDB[site][site]%> shortened to <%= site %>
+          <a href="/urls/<%=site%>">Edit</a>
+          <form method="POST" action="/urls/<%=site%>/delete?_method=DELETE">
+            <input type="submit" value="DELETE">
+          </form>
+          Views:<%=urlDB[site].visits%>
+          Unique Views:<%=urlDB[site].uniqueVisits%>
+          <br>
+          Created:<%= `${urlDB[site].timestampCreated.YYYY}.${urlDB[site].timestampCreated.MM}.${urlDB[site].timestampCreated.DD} at ${urlDB[site].timestampCreated.time}` %>
+        </li>
+      </div>
+      <% } %>
     </div>
   </ul>
 </div>
