--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,6 +10,8 @@
   <h1><%=shortURL%></h1>
   <h2><%=urlDB[shortURL]%></h2>
   <h3>Views:<%=urlDB.visits%></h3><h3>Unique Views:<%=urlDB.uniqueVisits%></h3>
+  <br>
+  <h3>Created:<%= `${urlDB.timestampCreated.YYYY}.${urlDB.timestampCreated.MM}.${urlDB.timestampCreated.DD} at ${urlDB.timestampCreated.time}` %></h3>
 
   <form action="?_method=PUT" method="POST" style="margin:150px;">
     <input id="longURL" type="text" name="longURL" value="<%=urlDB[shortURL]%>" style="width: 300px">
