refactor and tidying code

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,8 @@
 
 <body>
   <% include ./partials/_header %>
+
+  <h1>Login</h1>
   <form action="/login" method="POST" style="margin:150px;">
     <label for="email">Email:</label>
     <input id="email" type="email" name="email" placeholder="EM@IL.COM" style="width: 300px">
