--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,7 @@
 <body>
   <% include ./partials/_header %>
 
+  <h1>Register</h1>
   <form action="/register" method="POST" style="margin:150px;">
     <label for="email">Email:</label>
     <input id="email" type="email" name="email" placeholder="EM@IL.COM" style="width: 300px" required />
