Add some styling. Added README.md. Found bug with redirect not working from /u/:id

--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -1,21 +1,80 @@
+<!-- Bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Oswald font -->
+<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
+
 <meta charset="utf-8">
 
 <title>TinyURL</title>
 
 <style>
 body {
-  background: navy !important;
-  color: white;
+  font-family: 'Oswald', sans-serif !important;
+  background: #939F5C !important;
+  color: #F2F9B8;
   text-align: center;
 }
+
+a {
+  color: #BBCF8A;
+}
+
+a:hover {
+  color: #D16014 !important;
+}
+
+.navbar {
+  background-color: #313715;
+}
+
+.list-group-item {
+  background: #6B7443 !important;
+}
+
 .jumbotron {
-  color: black;
-  background-color: #004080 !important;
+  color: #BBCF8A;
+  background-color: #43492A !important;
 }
 .jumbotron a {
-  color: white !important;
+  color: #F2F9B8 !important;
 }
+
+.btn {
+  margin-bottom: 5px;
+}
+.btn-primary {
+  background-color: #7C8865;
+  border-color: #3E4433;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active {
+  color: #ffffff;
+  background-color: #535B43;
+  border-color: #3E4433;
+}
+
+.btn-secondary {
+  background-color: #DD8854;
+  border-color: #AC4F11;
+}
+
+.btn-secondary:hover,
+.btn-secondary:focus,
+.btn-secondary:active,
+.btn-secondary.active {
+  color: #ffffff;
+  background-color: #D16014;
+  border-color: #AC4F11;
+}
+
 
 #index_container {
   padding-top: 15px;
