--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <title>TinyURL</title>
 
-<nav class="navbar navbar-dark bg-dark navbar-fixed-top">
+<nav class="navbar navbar-fixed-top">
   <div class="container">
     <a href="/urls" class="navbar-brand">TinyURL</a>
     <ul class="nav navbar-nav navbar-right">
